{
  "version": 4,
  "terraform_version": "1.6.0",
  "serial": 30,
  "lineage": "33ee24d4-7fca-7595-6a37-17c4b4c9bd19",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-069626bc2be4547e8",
            "association_id": "eipassoc-0384226ed2eaf4a35",
            "domain": "vpc",
            "id": "eipalloc-069626bc2be4547e8",
            "network_border_group": "eu-west-3",
            "network_interface": "eni-0adbadedc5fe243fa",
            "private_dns": "ip-10-0-1-107.eu-west-3.compute.internal",
            "private_ip": "10.0.1.107",
            "public_dns": "ec2-35-180-176-228.eu-west-3.compute.amazonaws.com",
            "public_ip": "35.180.176.228",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05b5a865c3579bbc4",
            "arn": "arn:aws:ec2:eu-west-3:318988877498:instance/i-08fa6cdc25f12a19b",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "SSM-role",
            "id": "i-08fa6cdc25f12a19b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a7b32bca49a93aa9",
            "private_dns": "ip-10-0-2-247.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.247",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08aed4240b69b6e3d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02fb8e56c1e22f0be",
            "tags": {
              "Name": "Jenkins-server"
            },
            "tags_all": {
              "Name": "Jenkins-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a0978a0c4d85f9d9"
            ]
          },
          "dependencies": [
            "aws_subnet.subnet03",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:318988877498:internet-gateway/igw-0278a48d18b347f92",
            "id": "igw-0278a48d18b347f92",
            "owner_id": "318988877498",
            "tags": {
              "Name": "tf-ig-ahmed"
            },
            "tags_all": {
              "Name": "tf-ig-ahmed"
            },
            "vpc_id": "vpc-0794be948b2f01840"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-069626bc2be4547e8",
            "association_id": "eipassoc-0384226ed2eaf4a35",
            "connectivity_type": "public",
            "id": "nat-08af534f5fc317253",
            "network_interface_id": "eni-0adbadedc5fe243fa",
            "private_ip": "10.0.1.107",
            "public_ip": "35.180.176.228",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0524881d788493e66",
            "tags": {
              "Name": "tf-nat-ahmed"
            },
            "tags_all": {
              "Name": "tf-nat-ahmed"
            }
          },
          "dependencies": [
            "aws_eip.eip-01",
            "aws_subnet.subnet01",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "route-pub01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0278a48d18b347f92",
            "id": "r-rtb-0a73d5aa9b083b73c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a73d5aa9b083b73c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ig",
            "aws_route_table.pub-route",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "priv-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:318988877498:route-table/rtb-08973b2952fcb7f34",
            "id": "rtb-08973b2952fcb7f34",
            "owner_id": "318988877498",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-08af534f5fc317253",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tf-priroute-ahmed"
            },
            "tags_all": {
              "Name": "tf-priroute-ahmed"
            },
            "timeouts": null,
            "vpc_id": "vpc-0794be948b2f01840"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip-01",
            "aws_nat_gateway.nat-01",
            "aws_subnet.subnet01",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:318988877498:route-table/rtb-0a73d5aa9b083b73c",
            "id": "rtb-0a73d5aa9b083b73c",
            "owner_id": "318988877498",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0278a48d18b347f92",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tf-pubroute-ahmed"
            },
            "tags_all": {
              "Name": "tf-pubroute-ahmed"
            },
            "timeouts": null,
            "vpc_id": "vpc-0794be948b2f01840"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-098d55c95e3c58029",
            "route_table_id": "rtb-0a73d5aa9b083b73c",
            "subnet_id": "subnet-0524881d788493e66"
          },
          "dependencies": [
            "aws_route_table.pub-route",
            "aws_subnet.subnet01",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f8778c63ec2dfc98",
            "route_table_id": "rtb-0a73d5aa9b083b73c",
            "subnet_id": "subnet-0d9a7fc1b32f76bb4"
          },
          "dependencies": [
            "aws_route_table.pub-route",
            "aws_subnet.subnet02",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-077fd54624ea483f0",
            "route_table_id": "rtb-08973b2952fcb7f34",
            "subnet_id": "subnet-02fb8e56c1e22f0be"
          },
          "dependencies": [
            "aws_eip.eip-01",
            "aws_nat_gateway.nat-01",
            "aws_route_table.priv-route",
            "aws_subnet.subnet01",
            "aws_subnet.subnet03",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "d",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03e43e1ad89f93cce",
            "route_table_id": "rtb-08973b2952fcb7f34",
            "subnet_id": "subnet-04793c39f67151523"
          },
          "dependencies": [
            "aws_eip.eip-01",
            "aws_nat_gateway.nat-01",
            "aws_route_table.priv-route",
            "aws_subnet.subnet01",
            "aws_subnet.subnet04",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:318988877498:subnet/subnet-0524881d788493e66",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0524881d788493e66",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "318988877498",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tf-pub1-subnet-ahmed"
            },
            "tags_all": {
              "Name": "tf-pub1-subnet-ahmed"
            },
            "vpc_id": "vpc-0794be948b2f01840"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:318988877498:subnet/subnet-0d9a7fc1b32f76bb4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d9a7fc1b32f76bb4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "318988877498",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tf-pub2-subnet-ahmed"
            },
            "tags_all": {
              "Name": "tf-pub2-subnet-ahmed"
            },
            "vpc_id": "vpc-0794be948b2f01840"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet03",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:318988877498:subnet/subnet-02fb8e56c1e22f0be",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02fb8e56c1e22f0be",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "318988877498",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tf-pri1-subnet-ahmed"
            },
            "tags_all": {
              "Name": "tf-pri1-subnet-ahmed"
            },
            "vpc_id": "vpc-0794be948b2f01840"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet04",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:318988877498:subnet/subnet-04793c39f67151523",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04793c39f67151523",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "318988877498",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tf-pri2-subnet-ahmed"
            },
            "tags_all": {
              "Name": "tf-pri2-subnet-ahmed"
            },
            "vpc_id": "vpc-0794be948b2f01840"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:318988877498:vpc/vpc-0794be948b2f01840",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e11fc29d2077fe03",
            "default_route_table_id": "rtb-0a33bf08ec8e077b1",
            "default_security_group_id": "sg-0a0978a0c4d85f9d9",
            "dhcp_options_id": "dopt-001aae26d8b67632b",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0794be948b2f01840",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a33bf08ec8e077b1",
            "owner_id": "318988877498",
            "tags": {
              "Name": "tf-vpc-ahmed"
            },
            "tags_all": {
              "Name": "tf-vpc-ahmed"
            }
          }
        }
      ]
    }
  ]
}